[tool.poetry]
name = "party"
version = "0.1.0"
description = "Software"
authors = ["fingadumbledore <fingadumbledore@gmail.com>", "hyperbel <hyperbel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.0"
pytest = "^7.4.0"
pylint = "^2.17.4"
pytest-cov = "^4.1.0"
pymongo = "^4.4.0"
flask_socketio = "^5.3.4"
faker = "^19.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
